# rosclaw-vision-mcp

./: .gitignore  PR_DESCRIPTION.md  README.md  pyproject.toml
config/: mcp_config.json  vision-mcp.conf
demos/: demo_all.py
scripts/: install-systemd.sh  launch-multi-camera.sh  start-server.sh
src/: vision_mcp_enhanced.py  vision_mcp_server.py
systemd/: rosclaw-vision@.service
tests/: test_vision_bridge.py
